Self_Paced_Exercices/Traffic_Management/Traffic_Mirroring/answer/DestinationRule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: helloworld-dr
spec:
  host: helloworld.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
